<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="inspire.example.com.demo1.SecondHospital">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">


            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:background="@drawable/red"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"

                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#fff"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:background="#fff"
                    android:orientation="horizontal"

                    android:layout_height="wrap_content">

                    <!-- <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Info"
                         android:textColor="#000"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"

                         android:textColor="#000"
                         android:text="this is info page" />

  -->
                    <ImageView
                        android:contentDescription="@null"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:paddingRight="20dp"
                        android:src="@drawable/acc"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:paddingRight="20dp"
                        android:src="@drawable/acc1"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:layout_width="50dp"
                        android:paddingRight="20dp"
                        android:layout_height="50dp"
                        android:src="@drawable/wheel"/>
                    <ImageView
                        android:contentDescription="@null"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:paddingRight="20dp"

                        android:src="@drawable/seat"/>
                    <ImageView
                        android:contentDescription="@null"
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:src="@drawable/blind"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:paddingBottom="1dp"

                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    android:background="#fff"
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:paddingBottom="40dp"

                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:textColor="#000"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:text="@string/thirdcard" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btnLocation"
                        android:layout_marginTop="-80dp"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/gps" />



                    <TextView
                        android:paddingTop="35dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information"
                        android:textColor="#B3000000"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:text="@string/cheese_ipsum" />



                </LinearLayout>
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="@dimen/card_margin"
                android:paddingBottom="1dp"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    android:background="#fff"
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:paddingBottom="80dp"
                    android:layout_height="wrap_content">
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"

                        android:paddingLeft="1dp"
                        android:layout_height="wrap_content"


                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="4.5/5"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/reviews"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"

                        android:text="@string/review"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>





    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/share" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|center"
        android:src="@drawable/rating" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|start"
      />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#0088ff"
        android:padding="10dp"

        android:text="Book Appionment"/>




</android.support.design.widget.CoordinatorLayout>
